trunk/Archive2/da/57c9b3dffafc85/output
main.cpp:3:4: error: stray '#' in program
 02 #include <fstream>  
    ^
main.cpp:5:4: error: stray '#' in program
 03 #include <iomanip>  
    ^
main.cpp:7:4: error: stray '#' in program
 04 #include <string>  
    ^
main.cpp:15:1: error: invalid digit "8" in octal constant
 08 /*****Declare Variables*****/ 
 ^
main.cpp:17:1: error: invalid digit "9" in octal constant
 09     ifstream fin;  
 ^
main.cpp:59:1: error: stray '\' in program
 30     cout<<\t"This pogram will calculate and report user's tax liabilities."<<endl;  
 ^
main.cpp:61:1: error: stray '\' in program
 31     cout<<\t"===================================================="<<endl;  
 ^
main.cpp:63:1: error: stray '\' in program
 32     cout<<\t"Name"<<endl<<name;  
 ^
main.cpp:73:1: error: stray '\' in program
 37     cout<<\t"===================================================="<<endl;  
 ^
main.cpp:3:1: error: expected unqualified-id before numeric constant
 02 #include <fstream>  
 ^
main.cpp:11:1: error: expected unqualified-id before numeric constant
 06 void main (void)  
 ^
